# ixy

./: .travis.yml  CMakeLists.txt  README.md
src/: allocator_zoo.c  allocator_zoo.h  libseccomp_init.c  libseccomp_init.h  memory.c  memory.h  pci.h  setup_seccomp.h  stats.cpp  stats.h  stats.hpp
src/allocator/: allocator.h  allocator_common.h  dma_allocator.c  fallback_allocator.c  mallocator.c  null_allocator.c  rte_spinlock.h  spinlock_stack_allocator.c  stack_allocator.c
src/allocator/tests/: spinlock_stack_allocator.cpp
src/app/: allocator-example.c  ixy-cpp-fwd.cpp  ixy-fwd.c  ixy-pktgen.c
src/driver/: device.hpp  ixgbe.c  ixgbe.cpp  ixgbe.hpp
